QFileSystemEngine/Win: fix incorrect buffer size in currentPath()

We've just allocated a buffer of 'size' size, which is bigger than
PATH_MAX, but told GetCurrentDirectory() that its size is PATH_MAX.

Fixes: QTBUG-103852
Change-Id: Ibcde9b9795ad42ac9978fffd16f2ba2cd8712cb7
Reviewed-by: Friedemann Kleint <Friedemann.Kleint@qt.io>
Reviewed-by: Mårten Nordheim <marten.nordheim@qt.io>
(cherry picked from commit e21522b8bfb4375e9c3f0336b1d218523de721b0)
Reviewed-by: Qt Cherry-pick Bot <cherrypick_bot@qt-project.org>